# sokrat-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ONE_PAGER.md
examples/: demo_offline.py
examples/course/: finance_basics.md
scripts/: make_demo_gif.py
sokrat/: __init__.py  agent.py  cli.py  ingest.py  llm.py  memory.py  models.py  report.py  retrieval.py  tools.py
tests/: test_agent_loop.py  test_core.py
